# mb-applet-volume

./: .autoipkg  AUTHORS  ChangeLog  Makefile.am  TODO  configure.ac  mb-applet-volume.desktop  volume-applet.c
.deps/: volume-applet.P
